Revert "Added packages to monorepo, updated the package.json for one of them"
This reverts commit 52984084065bf4b07325a531f62020d2bc84fc6c.

--- a/packages/moviehub-api-cloudflate-worker/package.json
+++ b/packages/moviehub-api-cloudflate-worker/package.json
@@ -11,6 +11,6 @@
   "author": "Vishal <neharkar.vishal@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "prettier": "latest"
+    "prettier": "^1.18.2"
   }
 }
