--- a/packages/moviehub-api-cloudflate-worker/.gitignore
+++ b/packages/moviehub-api-cloudflate-worker/.gitignore
@@ -7,3 +7,10 @@ wasm-pack.log
 worker/
 node_modules/
 .cargo-ok
+.env
+.env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+wrangler.toml
