--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,11 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+wrangler.toml
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
