--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,5 +18,9 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "@cloudflare/wrangler": "^1.3.1",
+    "dotenv": "^8.1.0"
   }
 }
