--- a/packages/moviehub-api-cloudflate-worker/package.json
+++ b/packages/moviehub-api-cloudflate-worker/package.json
@@ -11,6 +11,9 @@
   "author": "Vishal <neharkar.vishal@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@cloudflare/wrangler": "^1.3.1",
+    "@moviehub/common": "*",
+    "dotenv": "^8.1.0",
     "prettier": "^1.18.2"
   }
 }
