--- a/packages/moviehub-app-react/package.json
+++ b/packages/moviehub-app-react/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudflare/wrangler": "^1.3.1",
+    "@moviehub/common": "*",
+    "dotenv": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest"
