Successful 200 OK, we up and running.

--- a/packages/moviehub-api-cloudflate-worker/package.json
+++ b/packages/moviehub-api-cloudflate-worker/package.json
@@ -5,6 +5,8 @@
   "description": "A template for kick starting a Cloudflare Workers project",
   "main": "index.js",
   "scripts": {
+    "start": "wrangler preview --watch",
+    "publish": "wrangler publish",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
