--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@cloudflare/wrangler": "^1.3.1",
-    "dotenv": "^8.1.0"
+    "dotenv": "^8.1.0",
+    "lodash": "^4.17.15"
   }
 }
