--- a/packages/moviehub-api-cloudflate-worker/package.json
+++ b/packages/moviehub-api-cloudflate-worker/package.json
@@ -16,6 +16,7 @@
     "@cloudflare/wrangler": "^1.3.1",
     "@moviehub/common": "*",
     "dotenv": "^8.1.0",
+    "lodash": "^4.17.15",
     "prettier": "^1.18.2"
   }
 }
