--- a/packages/moviehub-app-react/package.json
+++ b/packages/moviehub-app-react/package.json
@@ -6,6 +6,7 @@
     "@cloudflare/wrangler": "^1.3.1",
     "@moviehub/common": "*",
     "dotenv": "^8.1.0",
+    "lodash": "^4.17.15",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest"
