Rename the package for more clarity, and refactoring code into generic components.

--- a/packages/moviehub-web-react/package.json
+++ b/packages/moviehub-web-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moviehub-cloudflare-wrangler",
+  "name": "moviehub-web-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
